Añadidas mas texturas y sistema de soporte para audio

--- a/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2.vcxproj
+++ b/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2.vcxproj
@@ -139,18 +139,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="audio.cpp" />
     <ClCompile Include="bubbles.cpp" />
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="assets.cpp" />
     <ClCompile Include="py.cpp" />
+    <ClCompile Include="statics.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="audio.h" />
     <ClInclude Include="bubbles.h" />
     <ClInclude Include="engine.h" />
     <ClInclude Include="assets.h" />
     <ClInclude Include="py.h" />
+    <ClInclude Include="statics.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
