Añadidos algunos camvios

--- a/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2.vcxproj
+++ b/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2/Bubble Puzzle Shooter 2.vcxproj
@@ -78,6 +78,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>D:\Visual Studio 2017\Shared\Python36_86\include;D:\BPS2\pybind11-2.2.4\include;D:\BPS2\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>D:\BPS2\SFML-2.5.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -93,6 +94,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>D:\Visual Studio 2017\Shared\Python36_86\include;D:\BPS2\pybind11-2.2.4\include;D:\BPS2\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>D:\BPS2\SFML-2.5.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
