--- a/Puzzle Bubble Shotter/Puzzle Bubble Shotter/Puzzle Bubble Shotter.vcxproj
+++ b/Puzzle Bubble Shotter/Puzzle Bubble Shotter/Puzzle Bubble Shotter.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="assets.cpp" />
     <ClCompile Include="audio.cpp" />
     <ClCompile Include="bubbles.cpp" />
+    <ClCompile Include="bub_board.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="game_objs.cpp" />
@@ -149,9 +150,11 @@
     <ClInclude Include="assets.h" />
     <ClInclude Include="audio.h" />
     <ClInclude Include="bubbles.h" />
+    <ClInclude Include="bub_board.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="engine.h" />
     <ClInclude Include="game_objs.h" />
+    <ClInclude Include="iterators.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="mem_alloc.h" />
     <ClInclude Include="paths.h" />
