--- a/Puzzle Bubble Shotter/Puzzle Bubble Shotter/Puzzle Bubble Shotter.vcxproj.filters
+++ b/Puzzle Bubble Shotter/Puzzle Bubble Shotter/Puzzle Bubble Shotter.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="bubbles.cpp">
       <Filter>Archivos de origen\Bubbles</Filter>
     </ClCompile>
+    <ClCompile Include="bub_board.cpp">
+      <Filter>Archivos de origen\Bubbles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="py.h">
@@ -97,6 +100,12 @@
     </ClInclude>
     <ClInclude Include="bubbles.h">
       <Filter>Archivos de encabezado\Bubbles</Filter>
+    </ClInclude>
+    <ClInclude Include="bub_board.h">
+      <Filter>Archivos de encabezado\Bubbles</Filter>
+    </ClInclude>
+    <ClInclude Include="iterators.h">
+      <Filter>Archivos de encabezado\Utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
