--- a/Puzzle Bubble Shotter/Puzzle Bubble Shotter/Puzzle Bubble Shotter.vcxproj.filters
+++ b/Puzzle Bubble Shotter/Puzzle Bubble Shotter/Puzzle Bubble Shotter.vcxproj.filters
@@ -86,7 +86,10 @@
     <ClCompile Include="camera.cpp">
       <Filter>Archivos de origen\Scenario</Filter>
     </ClCompile>
-    <ClCompile Include="canvas.cpp">
+    <ClCompile Include="rng.cpp">
+      <Filter>Archivos de origen\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="scenario_props.cpp">
       <Filter>Archivos de origen\Scenario</Filter>
     </ClCompile>
   </ItemGroup>
@@ -138,6 +141,12 @@
     </ClInclude>
     <ClInclude Include="canvas.h">
       <Filter>Archivos de encabezado\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="rng.h">
+      <Filter>Archivos de encabezado\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="scenario_props.h">
+      <Filter>Archivos de encabezado\Scenario</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
